--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -33,14 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "863cf2de",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bioc1523/software/anaconda/install/envs/openmm-rbfe/lib/python3.8/site-packages/MDAnalysis/coordinates/TRJ.py:1209: DeprecationWarning: Please use `netcdf_file` from the `scipy.io` namespace, the `scipy.io.netcdf` namespace is deprecated.\n",
+      "  class NCDFPicklable(scipy.io.netcdf.netcdf_file):\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08768cee65054f44984ca964b7d4c0b0",
+       "model_id": "119111e1c02e451c9bfb38c54ec703b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "166928850cef41a7b83725aa55ff6c9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3d89a17c",
    "metadata": {},
    "outputs": [
@@ -103,7 +123,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4096ce97",
    "metadata": {},
    "outputs": [],
@@ -224,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5b89da93",
    "metadata": {},
    "outputs": [],
@@ -256,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1c983e93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebb890c78f1347a6811fe656beb3761b",
+       "model_id": "01e71fb759504d04b2f4719a2bb63d40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ce9c2525",
    "metadata": {},
    "outputs": [
@@ -301,8 +321,8 @@
      "output_type": "stream",
      "text": [
       "molecule 1 smiles:  [H]c1c([H])c([H])c([H])c([H])c1[H]\n",
-      "molecule 2 smiles:  [H]Oc1c([H])c([H])c([H])c([H])c1[H]\n",
-      "map between molecule 1 and 2:  {0: 0, 1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 6: 6, 7: 7, 8: 8, 9: 9, 10: 12, 11: 11}\n"
+      "molecule 2 smiles:  [H]c1c([H])c([H])c(OC([H])([H])[H])c([H])c1[H]\n",
+      "map between molecule 1 and 2:  {0: 2, 1: 3, 2: 4, 3: 5, 4: 6, 5: 7, 6: 9, 7: 0, 8: 0, 9: 11, 10: 12, 11: 13}\n"
      ]
     }
    ],
@@ -329,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cdcfae45",
    "metadata": {},
    "outputs": [],
@@ -350,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d8d1617d",
    "metadata": {},
    "outputs": [],
@@ -426,26 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "0b6c9ec3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0675999e348403eafc19bf0ecd5a27c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "630460f7f6d6448fa35545520a453ed3",
+       "model_id": "e855bef521a64433adc0b9c30f16955d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "23b778d6",
    "metadata": {},
    "outputs": [],
@@ -502,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fc56fd9b",
    "metadata": {},
    "outputs": [],
@@ -544,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "7337637c",
    "metadata": {},
    "outputs": [
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "87913c34",
    "metadata": {},
    "outputs": [],
@@ -664,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "c0d5d020",
    "metadata": {},
    "outputs": [],
@@ -693,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "add5624b",
    "metadata": {},
    "outputs": [
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "3b6adbbd",
    "metadata": {},
    "outputs": [
@@ -759,7 +767,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bioc1523/github/OpenFE_showcases/utils/setup.py:323: UserWarning: Not attempting to fix atom mapping to account for constraints. Please note that core atoms which have constrained bonds and changing bond lengths are not allowed.\n",
+      "/home/bioc1523/github/OpenFE_showcases/utils/topologyhelpers.py:323: UserWarning: Not attempting to fix atom mapping to account for constraints. Please note that core atoms which have constrained bonds and changing bond lengths are not allowed.\n",
       "  warnings.warn(wmsg)\n"
      ]
     }
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "826b708e",
    "metadata": {},
    "outputs": [],
@@ -843,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "509ea59a",
    "metadata": {},
    "outputs": [
@@ -854,12 +862,7 @@
       "INFO:\tNumExpr defaulting to 8 threads.\n",
       "INFO:\tcreating hybrid system\n",
       "INFO:\tsetting force field terms\n",
-      "INFO:\tadding forces\n",
-      "INFO:\tDONE\n",
-      "INFO:\tcreating hybrid system\n",
-      "INFO:\tsetting force field terms\n",
-      "INFO:\tadding forces\n",
-      "INFO:\tDONE\n"
+      "INFO:\tadding forces\n"
      ]
     }
    ],
@@ -903,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1d59f82e",
    "metadata": {},
    "outputs": [
@@ -968,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9a780811",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9668e896",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "bf378038",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "eba22215",
    "metadata": {},
    "outputs": [
