--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -446,6 +446,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OutMultiEdgeView([(<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f9576845130>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f95e4512220>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f95e4512f40>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957ceb9040>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957cc58850>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957cc58640>, 0)])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph = network.graph\n",
+    "graph.edges"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "0b6c9ec3",
    "metadata": {},
@@ -862,7 +883,12 @@
       "INFO:\tNumExpr defaulting to 8 threads.\n",
       "INFO:\tcreating hybrid system\n",
       "INFO:\tsetting force field terms\n",
-      "INFO:\tadding forces\n"
+      "INFO:\tadding forces\n",
+      "INFO:\tDONE\n",
+      "INFO:\tcreating hybrid system\n",
+      "INFO:\tsetting force field terms\n",
+      "INFO:\tadding forces\n",
+      "INFO:\tDONE\n"
      ]
     }
    ],
@@ -906,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1d59f82e",
    "metadata": {},
    "outputs": [
@@ -916,7 +942,7 @@
        "9"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9a780811",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9668e896",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "bf378038",
    "metadata": {},
    "outputs": [
