Remove old notebooks, add environment

--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -10,7 +10,7 @@
     "This notebook demonstrates the current capabilities of the OpenFE toolkit. Here\n",
     "we specifically look at how relative binding free energy calculations can be\n",
     "carried out using the OpenMM MD engine in combination with the OpenFE toolset.\n",
-    "This notebook will be continually updated OpenFE introduces new features."
+    "This notebook will be continually updated as OpenFE introduces new features."
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "## 1. Overview\n",
     "\n",
-    "### Relative binding free energies of small ligands to T4-lysozyme L99A mutant\n",
+    "### Relative binding free energies of small ligands complexed to T4-lysozyme L99A mutant\n",
     "\n",
     "In this example we look how one could set up a network of transformations using\n",
     "the OpenFE toolkit for small chemical modifications of an initial known\n",
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "119111e1c02e451c9bfb38c54ec703b9",
+       "model_id": "c20e30a7aa0547a4a937e961f33ee986",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "166928850cef41a7b83725aa55ff6c9c",
+       "model_id": "549c5759a31d4ae3bee109aca135d818",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     "core benzene ring.\n",
     "\n",
     "Five pre-aligned compounds (phenol, toluene, anisole, styrene, benzonitrile,\n",
-    "and benzaldehyde) and the benzene cores are available under\n",
+    "and benzaldehyde) and the benzene core are available under\n",
     "`inputs/ligands.sdf`. These are shown in the cell below."
    ]
   },
@@ -283,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01e71fb759504d04b2f4719a2bb63d40",
+       "model_id": "9109dba51b504b35aab08ad64d667cd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,8 +321,8 @@
      "output_type": "stream",
      "text": [
       "molecule 1 smiles:  [H]c1c([H])c([H])c([H])c([H])c1[H]\n",
-      "molecule 2 smiles:  [H]c1c([H])c([H])c(OC([H])([H])[H])c([H])c1[H]\n",
-      "map between molecule 1 and 2:  {0: 2, 1: 3, 2: 4, 3: 5, 4: 6, 5: 7, 6: 9, 7: 0, 8: 0, 9: 11, 10: 12, 11: 13}\n"
+      "molecule 2 smiles:  [H]Oc1c([H])c([H])c([H])c([H])c1[H]\n",
+      "map between molecule 1 and 2:  {0: 0, 1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 6: 6, 7: 7, 8: 8, 9: 9, 10: 12, 11: 11}\n"
      ]
     }
    ],
@@ -446,35 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OutMultiEdgeView([(<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f9576845130>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f95e4512220>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f95e4512f40>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957ceb9040>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957cc58850>, 0), (<openfe.setup.molecule.Molecule object at 0x7f95e41db280>, <openfe.setup.molecule.Molecule object at 0x7f957cc58640>, 0)])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph = network.graph\n",
-    "graph.edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0b6c9ec3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e855bef521a64433adc0b9c30f16955d",
+       "model_id": "ea043cd9d54e4a59b40bbd86542096ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -506,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "23b778d6",
    "metadata": {},
    "outputs": [],
@@ -531,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "fc56fd9b",
    "metadata": {},
    "outputs": [],
@@ -573,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "7337637c",
    "metadata": {},
    "outputs": [
@@ -637,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "87913c34",
    "metadata": {},
    "outputs": [],
@@ -693,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "c0d5d020",
    "metadata": {},
    "outputs": [],
@@ -722,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "add5624b",
    "metadata": {},
    "outputs": [
@@ -780,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "3b6adbbd",
    "metadata": {},
    "outputs": [
@@ -836,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "826b708e",
    "metadata": {},
    "outputs": [],
@@ -872,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "509ea59a",
    "metadata": {},
    "outputs": [
@@ -932,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "1d59f82e",
    "metadata": {},
    "outputs": [
@@ -942,7 +921,7 @@
        "9"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "9a780811",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "9668e896",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "bf378038",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "eba22215",
    "metadata": {},
    "outputs": [
